refactor(rent-service): remove hard coded test data